--- a/BETBOB.CLI/BETBOB.CLI.csproj
+++ b/BETBOB.CLI/BETBOB.CLI.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BETBOB.Logic\BETBOB.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
