--- a/BETBOB.CLI/BETBOB.CLI.csproj
+++ b/BETBOB.CLI/BETBOB.CLI.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\BETBOB.Logic\BETBOB.Logic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.3" />
+  </ItemGroup>
+
 </Project>
